--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tarojs/react": "3.2.12",
     "@tarojs/runtime": "3.2.12",
     "@tarojs/taro": "3.2.12",
+    "classnames": "^2.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "taro-ui": "^3.0.0-alpha.10"
