--- a/package.json
+++ b/package.json
@@ -46,16 +46,17 @@
     "taro-ui": "^3.0.0-alpha.10"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@tarojs/mini-runner": "3.2.12",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.2.12",
     "@tarojs/webpack-runner": "3.2.12",
+    "@types/react": "^17.0.2",
+    "@types/webpack-env": "^1.13.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-taro": "3.2.12",
-    "eslint-config-taro": "3.2.12",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-config-taro": "3.2.12",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "9.3.0"
   }
